# qupath-extension-gncnn

./: .gitignore  README.md  build.gradle  requirements.txt  settings.gradle
gdcnn/: README.md  pyproject.toml
gdcnn/classification/inference/: classify.py
gdcnn/detection/qupath/: download.py  segment.py  threshold.py  utils.py
gdcnn/gdcnn/classification/gutils/: utils.py
gdcnn/gdcnn/classification/inference/: classify.py  download.py  paths.py
gdcnn/gdcnn/detection/model/: config.py
gdcnn/gdcnn/detection/qupath/: config.py  download.py  mask_ops.py  nms.py  segment.py  shapely2geojson.py  threshold.py
gncnn/: README.md  pyproject.toml  requirements.txt
gncnn/gncnn/: definitions.py
gncnn/gncnn/classification/inference/: classify.py  download.py  paths.py
gncnn/gncnn/detection/model/: config.py
gncnn/gncnn/detection/qupath/: config.py  nms.py  segment.py  shapely2geojson.py  threshold.py  utils.py
install/: INSTALL.md  download_models.py  install.bat  install.groovy  install.sh  install_linux.sh  install_mac.sh  install_win.bat  linux.cfg  mac.cfg  windows.cfg
src/main/java/qupath/ext/: GDCnnExtension.java
src/main/java/qupath/ext/env/: VirtualEnvironment.java
src/main/java/qupath/ext/gdcnn/: AnnotationExportTask.java  ClassificationTask.java  DetectionTask.java  GDCnn.java  GDCnnExtension.java  GDCnnSetup.java  TaskPaths.java  ThresholdTask.java  Tiler.java  TilerTask.java  Utils.java
src/main/java/qupath/ext/gdcnn/entities/: ImageResult.java  ProgressListener.java
src/main/java/qupath/ext/gdcnn/env/: VirtualEnvironment.java
src/main/java/qupath/ext/gdcnn/listeners/: ProgressListener.java
src/main/java/qupath/ext/gdcnn/tasks/: AnnotationExportTask.java  ClassificationTask.java  GlomerulusDetectionTask.java  TaskManager.java  TaskPaths.java  TilerTask.java  TissueDetectionTask.java
src/main/java/qupath/ext/gdcnn/ui/: ClassificationWarningController.java  ClassificationWarningPane.java  GDCnnCommand.java  GDCnnController.java  ResultsController.java  ResultsPane.java
src/main/java/qupath/ext/gdcnn/utils/: Utils.java
src/main/java/qupath/ext/gncnn/: GNCnnExtension.java
src/main/java/qupath/ext/gncnn/entities/: ImageResult.java  ProgressListener.java
src/main/java/qupath/ext/gncnn/env/: VirtualEnvironment.java
src/main/java/qupath/ext/gncnn/tasks/: AnnotationExportTask.java  ClassificationTask.java  GlomerulusDetectionTask.java  TaskManager.java  TaskPaths.java  TilerTask.java  TissueDetectionTask.java
src/main/java/qupath/ext/gncnn/ui/: ClassificationWarningController.java  ClassificationWarningPane.java  GNCnnCommand.java  GNCnnController.java  ResultsController.java  ResultsPane.java
src/main/java/qupath/ext/gncnn/utils/: Utils.java
src/main/java/qupath/ext/tasks/: AnnotationExportTask.java  ClassificationTask.java  GlomerulusDetectionTask.java  TaskPaths.java  TilerTask.java  TissueDetectionTask.java
src/main/java/qupath/ext/ui/: GDCnnCommand.java  GDCnnController.java
src/main/java/qupath/ext/utils/: Utils.java
src/main/resources/qupath/ext/gdcnn/ui/: ClassificationWarningPane.fxml  MainPane.fxml  ResultsPane.fxml
src/main/resources/qupath/ext/gncnn/ui/: ClassificationWarningPane.fxml  MainPane.fxml  ResultsPane.fxml
src/main/resources/qupath/ext/ui/: MainPane.fxml
